@@ -20,7 +20,11 @@ module Nokogiri
         AS_HTML         = 64
 
         # the default for XML documents
-        DEFAULT_XML  = FORMAT | AS_XML
+        if Nokogiri.jruby?
+          DEFAULT_XML  = AS_XML # https://github.com/tenderlove/nokogiri/issues/#issue/415
+        else
+          DEFAULT_XML  = FORMAT | AS_XML
+        end
         # the default for HTML document
         DEFAULT_HTML = FORMAT | NO_DECLARATION | NO_EMPTY_TAGS | AS_HTML
         # the default for XHTML document
