@@ -4,6 +4,11 @@
 
   * extracted sets of Node::SaveOptions into Node::SaveOptions::DEFAULT_{X,H,XH}TML (refactor)
 
+* Bugfixes
+
+  * default output of XML on JRuby is no longer formatted due to
+    inconsistent whitespace handling. #415
+
 == 1.5.0 beta3 / 2010/12/02
 
 * Notes
